other/res/resolve-image-to-digest/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: resolve-image-to-digest
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../resolve-image-to-digest.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - apply:
        file: podcontroller.yaml
    - assert:
        file: pods-patched.yaml
    - assert:
        file: podcontroller-patched.yaml
